--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,61 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole blog, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
+#
+# If you need help with YAML syntax, here are some quick references for you:
+# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
+# https://learnxinyminutes.com/docs/yaml/
+#
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
+# 指定网站的标题
+title: Xiao Nan 's blog
+# 指定联系人邮箱地址
+email: xiaon24@mails.tsinghua.com
+# 网站的简要描述
+description: >-  'This site is where I practice github page functionality and complete course tasks' # this means to ignore newlines until "baseurl:"
+  Write an awesome description for your new site here. You can edit this
+  line in _config.yml. It will appear in your document head meta (for
+  Google search results) and in your feed.xml site description.
+# # 站点的子目录，如果你的网站托管在子目录下，需要指定  
+# baseurl: "" # the subpath of your site, e.g. /blog
+# 网站的基本 URL 地址
+url: "https://xiaonan1111.github.io/skills-github-pages/" # the base hostname & protocol for your site, e.g. http://example.com
+# github的用户名
+github_username:  XiaoNan1111
+
+# 指定要使用的 Jekyll 主题，如果不使用主题，则为空
 theme: minima
+# 列出要在站点构建过程中使用的插件
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default.
+# Any item listed under the `exclude:` key here will be automatically added to
+# the internal "default list".
+#
+# Excluded items can be processed by explicitly listing the directories or
+# their entries' file path in the `include:` list.
+#
+# exclude:
+#   - .sass-cache/
+#   - .jekyll-cache/
+#   - gemfiles/
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules/
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
